@@ -1,3 +1,7 @@
+2004-04-11  Andreas Boose  <viceteam@t-online.de>
+
+	* POTFILES.in: Added `uiromset.c'.
+
 2004-03-21  Andreas Boose  <viceteam@t-online.de>
 
 	* POTFILES.in: Added `uitfe.c' and `uilib.c'.
